// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakpoints 1`] = `
Object {
  "large": 1280,
  "medium": 1024,
  "small": 768,
}
`;

exports[`media 1`] = `
@media all and (min-width:768px) {
  .c0 {
    color: red;
  }
}

<div
  className="c0"
/>
`;

exports[`media with media type 1`] = `
@media screen and (min-width:1024px) {
  .c0 {
    color: red;
  }
}

<div
  className="c0"
/>
`;
